# invest.v2

./: .gitattributes  Makefile  README.md  docker-compose.yml
apps/desktop/: .env.example  index.html  package.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
backend/: go.mod  go.sum
backend/cmd/api/: main.go
backend/internal/alerts/: hub.go
backend/internal/auth/: jwt.go
backend/internal/cache/: redis.go
backend/internal/config/: config.go
backend/internal/domain/: goal.go  instrument.go  p5.go  portfolio.go  settings.go  transaction.go  user.go  watchlist.go
backend/internal/engine/: client.go
backend/internal/market/: cached.go  mock.go  moex.go  provider.go
backend/internal/repo/: goal_memory.go  memory_crud.go  memory_p2.go  memory_p5.go  postgres.go  postgres_crud.go  postgres_p2.go  postgres_p3.go  postgres_p5.go  store.go  store_p2.go  store_p5.go  transaction_memory.go
backend/internal/ws/: hub.go
desktop/: go.mod
desktop/cmd/app/: main.go
desktop/ui/: index.html
docs/: ARCHITECTURE.md  BUILD_WINDOWS.md  PRIORITY_1.md  PRIORITY_2.md  PRIORITY_3.md  PRIORITY_4.md  PRIORITY_5.md
engine/: Cargo.toml
engine/fin-grpc/: Cargo.toml
engine/fin-grpc/src/: main.rs
engine/fin-math/: Cargo.toml
engine/fin-math/src/: lib.rs
migrations/: 001_core.sql  001_initial.sql  002_seed.sql  003_goal_contributions.sql  004_priority2.sql  005_priority5.sql
scripts/: build-sidecars.ps1
(+40 files in other folders)
