[package]
name = "fin-helper-desktop"
version = "0.1.0"
description = "Fin Helper desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "fin_helper_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
